Fix Latin RSS feed

--- a/initium.html
+++ b/initium.html
@@ -21,6 +21,6 @@ lang: la
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">Captetur <a href="{{ "/flux.xml" | prepend: site.baseurl }}">fluxus RSS</a></p>
+  <p class="rss-subscribe">Captetur <a href="{{ "/fluxus.xml" | prepend: site.baseurl }}">fluxus RSS</a></p>
 
 </div>
