Make donald categories and post_list partial

--- a/commentarii.html
+++ b/commentarii.html
@@ -11,7 +11,7 @@ type: rant
 
   {% include boethius_quote.html %}
 
-  {% include latin_sub_post_list.html %}
+  {% include post_list.html %}
 
   <p class="rss-subscribe">Captetur <a href="{{ "/fluxus.xml" | prepend: site.baseurl }}">fluxus RSS</a></p>
 
