--- a/donald.html
+++ b/donald.html
@@ -1,7 +1,10 @@
 ---
 layout: default
-ref: index
-lang: latine
+title: Donald
+permalink: /donald/
+ref: donald
+lang: english
+type: donald
 ---
 
 <div class="home">
