--- a/donaldus.html
+++ b/donaldus.html
@@ -1,7 +1,10 @@
 ---
 layout: default
-ref: index
+title: Donaldus
+permalink: /donaldus/
+ref: donald
 lang: latine
+type: donald
 ---
 
 <div class="home">
